[tool.poetry]
name = "autoblurring"
version = "0.1.0"
description = "Functionalities developed in the On Wheels project for autoblurring."
authors = ["sophieDataroots <sophie.decoppel@dataroots.io>"]
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12.0"
fastapi = "0.95.1"
uvicorn = "0.22.0"
python-multipart = "0.0.6"
segment-anything = "1.0"
torch = ">=2.0.0, !=2.0.1"
numpy = "1.23.4"
transformers = "4.16.0"
accelerate = "0.19.0"
scipy = "1.9.0"
safetensors = "0.3.1"
groundingdino-py = "0.4.0"
opencv-python-headless = "4.7.0.72"
gradio = "3.35.0"
gradio-client = "0.2.7"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[tool.poetry.group.dev.dependencies]
ffmpeg = "1.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
